os/linux/k3s/nginx-deployment.yaml
# Used to verify web connectivity, and that's it.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ab-scratch-resources-only
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ab-scratch-resources-only
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
